# Sorting-and-Graph-Algorithms-via-FHE

FHE/MS-SEAL/: CMakeLists.txt  main.cpp
FHE/MS-SEAL/BFV/: CMakeLists.txt  main.cpp
FHE/OpenFHE/bfv-bitwise/: CMakeLists.txt  bfv-bitwise.cpp
FHE/OpenFHE/ckks-appro/: CMakeLists.txt  ckks-appro.cpp
FHE/logs/BFV-sorting/: 3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
FHE/logs/CKKS-sorting/: 3.txt  4.txt
SSSP/: SSSPResolver  SSSPResolver.cpp  utils.cpp
SSSP/bfv/: CMakeLists.txt  bfv_helper.h  sssp.cpp
SSSP/ckks/: CMakeLists.txt  sssp.cpp
SSSP/experiment/log/local_connected/: connected_graph_10_log  connected_graph_15_log  connected_graph_20_log  connected_graph_25_log  connected_graph_30_log  connected_graph_5_log
SSSP/experiment/log/local_sparse/: sparse_graph_10_log  sparse_graph_15_log  sparse_graph_20_log  sparse_graph_25_log  sparse_graph_30_log  sparse_graph_5_log
SSSP/experiment/log/mr_connected/: connected_graph_10_log  connected_graph_15_log  connected_graph_20_log  connected_graph_25_log  connected_graph_30_log  connected_graph_5_log
SSSP/experiment/log/mr_sparse/: sparse_graph_10_log  sparse_graph_15_log  sparse_graph_20_log  sparse_graph_25_log  sparse_graph_30_log  sparse_graph_5_log
SSSP/mapreduce/: CMakeLists.txt  decryptDist_mapper.cpp  decryptDist_reducer.cpp  encryptGraph_mapper.cpp  encryptGraph_reducer.cpp  hdfs_helper.h  keygen.cpp  parallelDijkstra_mapper.cpp  parallelDijkstra_reducer.cpp  tfhe_helper.cpp  tfhe_helper.h
SSSP/tfhe/: CMakeLists.txt  fhe_helper.cpp  fhe_helper.h  sssp.cpp
(+24 files in other folders)
